<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview" />

       <EditText
        android:id="@+id/nameRegisterET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:padding="20dp"
        android:hint="@string/enter_your_name"
           app:layout_constraintTop_toBottomOf="@id/image"/>

    <EditText
        android:id="@+id/mailRegisterET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:textSize="20dp"
        android:padding="20dp"
        android:hint="Enter your E-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/nameRegisterET"
        />

    <EditText
        android:id="@+id/passRegisterET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="320dp"
        app:layout_constraintTop_toBottomOf="@id/mailRegisterET"/>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registerUser"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passRegisterET" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login_here"
        android:onClick="goToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>